--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -49,6 +49,12 @@ jobs:
         run: dotnet build --configuration Release --verbosity minimal
       - name: Initialise RDMP
         run: |
+          $rsa = New-Object System.Security.Cryptography.RSACryptoServiceProvider -ArgumentList 2048
+          $SavePath=".\keys"
+          New-Item $SavePath -ItemType directory | Out-Null
+          $rsa.toXmlString($true) | Out-File $SavePath\private-key.xml
+          $rsa.ToXmlString($false) | Out-File $SavePath\public-key.xml
+          $RDMP_KEY_LOCATION=$SavePath\private-key.xml
           dotnet run -c Release --no-build --project Tools/rdmp/rdmp.csproj -- install --createdatabasetimeout 180 --collation "Latin1_General_CS_AI" "(localdb)\MSSQLLocalDB" TEST_ -e
       - name: Create MySql Logging, DQE and Cohort Building Cache Db
         run: |
