--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -57,14 +57,23 @@ jobs:
         run: dotnet build --configuration Release --verbosity minimal
       - name: Initialise RDMP
         run: |
+          $SavePath=".\keys"
+          $RDMP_KEY_LOCATION="$SavePath\private-key.xml"
+          $env:RDMP_KEY_LOCATION="$SavePath\private-key.xml"
           dotnet run -c Release --no-build --project Tools/rdmp/rdmp.csproj -- install --createdatabasetimeout 180 --collation "Latin1_General_CS_AI" "(localdb)\MSSQLLocalDB" TEST_ -e
       - name: Create MySql Logging, DQE and Cohort Building Cache Db
         run: |
+          $SavePath=".\keys"
+          $RDMP_KEY_LOCATION="$SavePath\private-key.xml"
+          $env:RDMP_KEY_LOCATION="$SavePath\private-key.xml"
           dotnet run -c Release --no-build --project Tools/rdmp/rdmp.csproj -- createnewexternaldatabaseserver LiveLoggingServer_ID "DatabaseType:MySQL:Server=127.0.0.1;Uid=root;Pwd=YourStrong!Passw0rd;Database=rdmp_logging2" --dir ~/rdmp/rdmp-yaml/
           dotnet run -c Release --no-build --project Tools/rdmp/rdmp.csproj -- createnewexternaldatabaseserver DQE "DatabaseType:MySQL:Server=127.0.0.1;Uid=root;Pwd=YourStrong!Passw0rd;Database=rdmp_dqe" --dir ~/rdmp/rdmp-yaml/
           dotnet run -c Release --no-build --project Tools/rdmp/rdmp.csproj -- createnewexternaldatabaseserver CohortIdentificationQueryCachingServer_ID "DatabaseType:MySQL:Server=127.0.0.1;Uid=root;Pwd=YourStrong!Passw0rd;Database=rdmp_cache" --dir ~/rdmp/rdmp-yaml/
       - name: Run integration test scripts
         run: |
+            $SavePath=".\keys"
+            $RDMP_KEY_LOCATION="$SavePath\private-key.xml"
+            $env:RDMP_KEY_LOCATION="$SavePath\private-key.xml"
             dotnet run -c Release --no-build --project Tools/rdmp/rdmp.csproj -- -f ./scripts/create_list_destroy_catalogue.yaml 
             dotnet run -c Release --no-build --project Tools/rdmp/rdmp.csproj -- -f ./scripts/create_cohort.yaml 
             dotnet run -c Release --no-build --project Tools/rdmp/rdmp.csproj -- -f ./scripts/create_dataload.yaml 
