Add CodeQL analysis to bundle build workflow
- Initialize CodeQL analysis in bundle build job
- Configure CodeQL to exclude generated files (*.g.cs, *.g.i.cs, etc.)
- Run CodeQL analysis before bundling source
- Upload SARIF results only if issues are found

This integrates security analysis into the CI pipeline while filtering
out spurious alerts from generated code that cannot be fixed.

--- a/.github/configs/codeql.yml
+++ b/.github/configs/codeql.yml
@@ -6,6 +6,10 @@ paths-ignore:
   - "**/obj/**"
   - "**/bin/**"
   - "**/*.Designer.cs"
+  - "**/*.g.cs"
+  - "**/*Generated.cs"
+  - "**/*.g.i.cs"
+  - "**/*.designer.cs"
  
 query-filters:
   - exclude:
