--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -179,6 +179,26 @@ jobs:
         uses: actions/setup-dotnet@v5.0.0
         with:
           dotnet-version: 7.0.x
+      - name: Initialize CodeQL
+        uses: github/codeql-action/init@v3
+        with:
+          languages: csharp
+          config-file: ./.github/configs/codeql.yml
+          queries: +security-and-quality
+      - name: Build for CodeQL Analysis
+        run: |
+          dotnet build --configuration Release --verbosity minimal
+      - name: Perform CodeQL Analysis
+        uses: github/codeql-action/analyze@v3
+        with:
+          category: "/language:csharp"
+          upload: false
+          output: sarif-results
+      - name: Upload SARIF Results (if any issues found)
+        if: hashFiles('sarif-results/**/*')
+        uses: github/codeql-action/upload-sarif@v3
+        with:
+          sarif_file: sarif-results/
       - name: BundleSource
         shell: bash
         run: |
