Fix CodeQL permissions and path filtering
- Add security-events: write permission to bundle job to fix upload errors
- Replace ineffective paths-ignore with filter-sarif action for C# generated files
- Use upload: false + filter-sarif + upload-sarif pattern for proper filtering
- Remove paths-ignore from config as it doesn't work for C# compiled code

--- a/.github/configs/codeql.yml
+++ b/.github/configs/codeql.yml
@@ -1,16 +1,8 @@
 name: CodeQL Configuration
 
-paths-ignore:
-  - "**/*.md"
-  - "**/*.txt"
-  - "**/obj/**"
-  - "**/bin/**"
-  - "**/*.Designer.cs"
-  - "**/*.g.cs"
-  - "**/*Generated.cs"
-  - "**/*.g.i.cs"
-  - "**/*.designer.cs"
- 
+# Note: path filtering is done via filter-sarif action in the workflow
+# as paths-ignore doesn't work reliably for C# generated files
+
 query-filters:
   - exclude:
       id: cs/catch-of-all-exceptions
