--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -226,6 +226,14 @@ jobs:
         with:
           sarif_file: sarif-results/csharp.sarif
           category: "/language:csharp"
+      - name: Run markdown link check
+        uses: gaurav-nelson/github-action-markdown-link-check@v1
+        with:
+          use-quiet-mode: 'no'
+          use-verbose-mode: 'yes'
+          check-modified-files-only: 'yes'
+          config-file: 'deadlinksconfig.json'
+          base-branch: 'develop'
       - name: Temporary Bundle of ddls for auto-updater
         shell: bash
         run: |
