fix: Resolve build errors and optimize TableRepository connection pooling
Build Fixes:
- Excluded source generators from compilation
- Made attribute properties settable for named arguments
- Removed duplicate AotUsageStatistics class
- Added missing using directives
- Fixed tuple null checks and type conversions
- Fixed test inheritance issues

Performance Optimization:
- Implemented ThreadLocal<IManagedConnection> for long-lived connections
- Eliminates 20-50+ connection open/close cycles per operation
- Maintains one connection per thread for repository lifetime
- Full backward compatibility with transactions

--- a/Rdmp.Core/Rdmp.Core.csproj
+++ b/Rdmp.Core/Rdmp.Core.csproj
@@ -175,6 +175,9 @@
 	</ItemGroup>
 	<ItemGroup>
 		<Compile Include="..\SharedAssemblyInfo.cs" Link="SharedAssemblyInfo.cs" />
+		<!-- Exclude source generators from compilation - they run during build -->
+		<Compile Remove="Generators\**\*.cs" />
+		<None Include="Generators\**\*.cs" />
 	</ItemGroup>
 	<ItemGroup>
 		<Content Include="Validation\readme.txt" />
