Upgrade to FAnsiSql 3.3.0 and fix cross-platform test failures
- Upgrade from HIC.FAnsiSql 3.2.7 to FAnsiSql.Legacy 3.3.0
- Remove RDMP's custom connection pooling (ManagedConnectionPoolFactory)
  in favor of FAnsiSql's native ADO.NET connection pooling
- Fix 14 platform-specific test failures:
  * Path separator tests now use Path.Combine()
  * CSV line ending tests normalize \r\n to \n
  * Type reflection tests handle cross-platform exception differences
  * SQL date function tests expect GETUTCDATE() not GETDATE()
- Update package documentation (Packages.md)
- All 978 unit tests now pass on macOS

--- a/Rdmp.Core/Rdmp.Core.csproj
+++ b/Rdmp.Core/Rdmp.Core.csproj
@@ -330,7 +330,7 @@
 		<PackageReference Include="ExcelNumberFormat" />
 		<PackageReference Include="FluentFTP" />
 		<PackageReference Include="HIC.SynthEHR" />
-		<PackageReference Include="HIC.FAnsiSql" />
+		<PackageReference Include="FAnsiSql.Legacy" />
 		<PackageReference Include="LibArchive.Net" />
 		<PackageReference Include="Microsoft.Bcl.AsyncInterfaces" />
 		<PackageReference Include="Microsoft.SourceLink.GitHub">
