--- a/Plugins/RdmpDicom/Rdmp.Dicom/Rdmp.Dicom.csproj
+++ b/Plugins/RdmpDicom/Rdmp.Dicom/Rdmp.Dicom.csproj
@@ -26,12 +26,13 @@
 		<EmbeddedResource Include="db\up\005_EnsureUIDMapUnique.sql" />
 	</ItemGroup>
 	<ItemGroup>
-		<PackageReference Include="HIC.DicomTypeTranslation" Version="4.1.5" />
+		<!-- Updated to use DicomTypeTranslation (without HIC. prefix) with FAnsiSql.Legacy 3.3.1 -->
+		<PackageReference Include="DicomTypeTranslation" Version="4.2.0" />
 		<PackageReference Include="Microsoft.SourceLink.GitHub" Version="8.0.0">
 			<PrivateAssets>all</PrivateAssets>
 			<IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
 		</PackageReference>
-		<PackageReference Include="fo-dicom" Version="5.2.2" />
+		<PackageReference Include="fo-dicom" Version="5.2.4" />
 	</ItemGroup>
 	<ItemGroup>
 		<ProjectReference Include="..\..\..\Rdmp.Core\Rdmp.Core.csproj" />
