Migrate default branch from develop to main
- Update Dependabot to target main branch
- Update GitHub Actions workflows to use main as base
- Update README coverage badge to track main branch
- Update CHANGELOG unreleased comparison to main
- Update NoteForNewDevelopers release process for main
- Update PR template test plan link to main branch
- Update RdmpDicom plugin documentation links to main
- Update RdmpDicom CHANGELOG comparison to main
- Add comprehensive branch migration guide

This aligns RDMP with all other repositories in the workspace
and follows modern Git best practices with a single default branch.

Refs: docs/BRANCH-PR-ANALYSIS.md, docs/CODING-STANDARDS.md

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -227,7 +227,7 @@ jobs:
           use-verbose-mode: 'yes'
           check-modified-files-only: 'yes'
           config-file: 'deadlinksconfig.json'
-          base-branch: 'develop'
+          base-branch: 'main'
       - name: Archive production artifacts
         uses: actions/upload-artifact@v4
         with:
