--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -9,7 +9,7 @@ updates:
   schedule:
     interval: weekly
   open-pull-requests-limit: 10
-  target-branch: develop
+  target-branch: main
   reviewers:
     - jas88
     - jfriel
