Migrate to SynthDicom and integrate plugin tests
## Changes

### RdmpDicom Plugin
- Migrate from HIC.BadMedicine.Dicom 0.1.2 to SynthDicom 1.0.0
- Fix fo-dicom 5.2.4 API compatibility:
  - Replace null serviceProvider with ServiceCollection().BuildServiceProvider()
  - Update PacsFetch.cs and CachingSCP.cs DicomServiceDependencies constructors
  - Add Microsoft.Extensions.DependencyInjection using statement

### Test Integration
- Add HICPluginTests to main solution
- Add LoadModules.Extensions.Tests to main solution
- Add all plugin tests to scripts/run-all-tests.proj
- Remove non-existent ReusableCodeTests reference

### Documentation
- Update Plugins/RdmpDicom/Packages.md with SynthDicom package info
- Update Plugins/RdmpDicom/CHANGELOG.md with migration details
- Update main CHANGELOG.md with test integration entry

All cross-platform projects build successfully.

--- a/Plugins/RdmpDicom/Rdmp.Dicom.Tests/Rdmp.Dicom.Tests.csproj
+++ b/Plugins/RdmpDicom/Rdmp.Dicom.Tests/Rdmp.Dicom.Tests.csproj
@@ -41,7 +41,7 @@
     <ProjectReference Include="..\..\..\Tests.Common\Tests.Common.csproj" />
   </ItemGroup>
   <ItemGroup>
-    <PackageReference Include="HIC.BadMedicine.Dicom" Version="0.1.2" />
+    <PackageReference Include="SynthDicom" Version="1.0.0" />
     <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="9.0.7" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.14.1" />
     <PackageReference Include="NUnit" Version="4.3.2" />
