Fix build failures and resolve pre-commit check issues
- Enable cross-platform Windows targeting for WinForms projects
- Fix central package management conflicts (DotNetZip, Newtonsoft.Json)
- Add missing DotNetZip package to Directory.Packages.props
- Resolve all NUnit analyzer warnings (NUnit1032, NUnit1034, NUnit1033)
- Make base test classes abstract where appropriate
- Add proper TearDown disposal for AutomationPluginRepository
- Suppress warnings for classes with tests that are also used as base classes
- Fix TestContext.WriteLine usage in PropertyAccessorCacheTests
- Update GitHub workflow with database connection timeout improvements

All projects now build successfully with zero errors.

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -16,7 +16,7 @@ jobs:
     name: Run Database Tests
     runs-on: windows-latest
     env:
-      RDMP_KEY_LOCATION: D:\a\RDMP\RDMP\key\private-key.xml   
+      RDMP_KEY_LOCATION: D:\a\RDMP\RDMP\key\private-key.xml
     steps:
       - name: Checkout code
         uses: actions/checkout@v5
@@ -26,8 +26,8 @@ jobs:
         shell: bash
         run: |
           cat > ./Tools/rdmp/Databases.yaml << EOF
-          CatalogueConnectionString: Server=(localdb)\MSSQLLocalDB;Database=TEST_Catalogue;Trusted_Connection=True;TrustServerCertificate=true;
-          DataExportConnectionString: Server=(localdb)\MSSQLLocalDB;Database=TEST_DataExport;Trusted_Connection=True;TrustServerCertificate=true;
+          CatalogueConnectionString: Server=(localdb)\MSSQLLocalDB;Database=TEST_Catalogue;Trusted_Connection=True;TrustServerCertificate=true;Connection Timeout=180;
+          DataExportConnectionString: Server=(localdb)\MSSQLLocalDB;Database=TEST_DataExport;Trusted_Connection=True;TrustServerCertificate=true;Connection Timeout=180;
           EOF
       - name: Set RSA Key
         run: |
@@ -101,8 +101,8 @@ jobs:
         shell: bash
         run: |
           cat > ./Tools/rdmp/Databases.yaml << EOF
-          CatalogueConnectionString: Server=(localdb)\MSSQLLocalDB;Database=TEST_Catalogue;Trusted_Connection=True;TrustServerCertificate=true;
-          DataExportConnectionString: Server=(localdb)\MSSQLLocalDB;Database=TEST_DataExport;Trusted_Connection=True;TrustServerCertificate=true;
+          CatalogueConnectionString: Server=(localdb)\MSSQLLocalDB;Database=TEST_Catalogue;Trusted_Connection=True;TrustServerCertificate=true;Connection Timeout=180;
+          DataExportConnectionString: Server=(localdb)\MSSQLLocalDB;Database=TEST_DataExport;Trusted_Connection=True;TrustServerCertificate=true;Connection Timeout=180;
           EOF
       - name: Set RSA Key
         run: |
