--- a/Directory.Build.props
+++ b/Directory.Build.props
@@ -4,5 +4,7 @@
 		<LangVersion>latest</LangVersion>
 		<ManagePackageVersionsCentrally>true</ManagePackageVersionsCentrally>
 		<NoWarn>NU1902;NU1903;NU1904;1701;1702;CS1591;NU1701;CA1416</NoWarn>
+		<!-- Enable cross-platform Windows targeting for WinForms projects -->
+		<EnableWindowsTargeting>true</EnableWindowsTargeting>
 	</PropertyGroup>
 </Project>
