Add clean DTO implementation for XML serialization
- Create CombinedReportDataDto with proper XML serialization attributes
- Eliminate all reflection and casting for improved code quality
- Use simple string-based approach to avoid WCF proxy complexity
- Add proper error handling and fallback mechanisms
- Update SGenTypes to target clean DTO instead of WCF proxy types

Improves maintainability and eliminates performance overhead from reflection.

--- a/Plugins/HicPlugin/SCIStorePlugin/SCIStorePlugin.csproj
+++ b/Plugins/HicPlugin/SCIStorePlugin/SCIStorePlugin.csproj
@@ -10,7 +10,7 @@
 		<DebugType>embedded</DebugType>
 	</PropertyGroup>
 	<PropertyGroup>
-		<SGenTypes>SCIStorePlugin.Data.SciStoreReport;SCIStorePlugin.Data.CombinedReportData</SGenTypes>
+		<SGenTypes>SCIStorePlugin.Data.SciStoreReport;SCIStorePlugin.Data.CombinedReportDataDto</SGenTypes>
 	</PropertyGroup>
 	<ItemGroup>
 		<Compile Update="Service References\SciStoreServices81\Reference.cs">
