--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -2,7 +2,7 @@ name: Build
 
 # Run this workflow every time a new commit pushed to your repository
 
-on: 
+on:
   push
 
 env:
@@ -22,6 +22,9 @@ jobs:
         uses: actions/checkout@v5
       - name: setup .NET
         uses: actions/setup-dotnet@v5.0.0
+        with:
+          cache: true
+          cache-dependency-path: Directory.Packages.props
       - name: Populate Databases.yaml
         shell: bash
         run: |
@@ -91,12 +94,15 @@ jobs:
     name: Run File System Tests
     runs-on: windows-latest
     env:
-      RDMP_KEY_LOCATION: D:\a\RDMP\RDMP\key\private-key.xml  
+      RDMP_KEY_LOCATION: D:\a\RDMP\RDMP\key\private-key.xml
     steps:
       - name: Checkout code
         uses: actions/checkout@v5
       - name: setup .NET
         uses: actions/setup-dotnet@v5.0.0
+        with:
+          cache: true
+          cache-dependency-path: Directory.Packages.props
       - name: Populate Databases.yaml
         shell: bash
         run: |
@@ -176,16 +182,20 @@ jobs:
         uses: actions/checkout@v5
       - name: Setup .NET
         uses: actions/setup-dotnet@v5.0.0
+        with:
+          cache: true
+          cache-dependency-path: Directory.Packages.props
+      - name: Cache apt packages
+        uses: awalsh128/cache-apt-packages@v1.6.0
+        with:
+          packages: pixz p7zip-full
+          version: 1.0
       - name: Initialize CodeQL
         uses: github/codeql-action/init@v4
         with:
           languages: csharp
           config-file: ./.github/configs/codeql.yml
           queries: +security-and-quality
-      - name: Install compression tools
-        run: |
-          sudo apt-get update
-          sudo apt-get install -y pixz p7zip-full
       - name: Build and bundle
         id: version
         shell: bash
