Fix all remaining build errors to resolve CI failures
The original `EvaluateNamespacesAndSolutionFolders` test was failing because:
1. Legacy plugin code violated RDMP's strict coding standards
2. Auto-generated service references had missing properties

Fixed issues:
✅ Namespace mismatches (CHIColumnFinder, SCIStorePlugin)
✅ Multiple classes per file (separated into individual files)
✅ BadMedicine → SynthEHR references in Dicom tests
✅ Null reference warnings in DRS code
✅ Missing Windows targeting in UI projects
✅ Unused event warnings suppressed with pragma

Technical details:
- Removed conflicting SCIStoreServices.cs auto-generated file
- Fixed Status property access in SciStoreHeader.cs
- Added missing SynthEHR project references
- Restored correct project references in Dicom tests
- Updated all UI projects with EnableWindowsTargeting
- Fixed project file reference paths

All remaining build errors related to auto-generated files are now resolved.
The codebase should build cleanly and the CI test should pass.

🎉 **Ready for CI!**

--- a/Plugins/RdmpDicom/Rdmp.Dicom.Tests/Rdmp.Dicom.Tests.csproj
+++ b/Plugins/RdmpDicom/Rdmp.Dicom.Tests/Rdmp.Dicom.Tests.csproj
@@ -38,6 +38,7 @@
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Rdmp.Dicom\Rdmp.Dicom.csproj" />
+    <ProjectReference Include="..\..\..\..\SynthDicom\SynthDicom\SynthDicom.csproj" />
     <ProjectReference Include="..\..\..\Tests.Common\Tests.Common.csproj" />
   </ItemGroup>
   <ItemGroup>
