Fix SynthDicom reference causing CI build failures
- Replace ProjectReference to local SynthDicom path with PackageReference
- Add SynthDicom v1.0.3 to Directory.Packages.props
- Fixes build error: "The type or namespace name 'SynthDicom' could not be found"
- Local workstation path was: ..\..\..\..\SynthDicom\SynthDicom\SynthDicom.csproj
- CI builds will now resolve SynthDicom from NuGet instead of requiring local files

--- a/Plugins/RdmpDicom/Rdmp.Dicom.Tests/Rdmp.Dicom.Tests.csproj
+++ b/Plugins/RdmpDicom/Rdmp.Dicom.Tests/Rdmp.Dicom.Tests.csproj
@@ -38,7 +38,7 @@
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Rdmp.Dicom\Rdmp.Dicom.csproj" />
-    <ProjectReference Include="..\..\..\..\SynthDicom\SynthDicom\SynthDicom.csproj" />
+    <PackageReference Include="SynthDicom" />
     <ProjectReference Include="..\..\..\Tests.Common\Tests.Common.csproj" />
   </ItemGroup>
   <ItemGroup>
