--- a/Directory.Packages.props
+++ b/Directory.Packages.props
@@ -9,6 +9,7 @@
     <PackageVersion Include="ExcelNumberFormat" Version="1.1.0" />
     <PackageVersion Include="FluentFTP" Version="53.0.1" />
     <PackageVersion Include="HIC.SynthEHR" Version="2.0.1" />
+    <PackageVersion Include="SynthDicom" Version="1.0.3" />
     <!-- FAnsiSql.Legacy 3.3.2 (replaces older FAnsi 3.2.7 references) -->
     <PackageVersion Include="FAnsiSql.Legacy" Version="3.3.2" />
     <PackageVersion Include="LibArchive.Net" Version="0.1.5" />
