--- a/Directory.Build.props
+++ b/Directory.Build.props
@@ -3,6 +3,7 @@
 		<TargetFramework>net9.0</TargetFramework>
 		<LangVersion>latest</LangVersion>
 		<ManagePackageVersionsCentrally>true</ManagePackageVersionsCentrally>
-		<NoWarn>NU1902;NU1903;NU1904;1701;1702;CS1591;NU1701;CA1416</NoWarn>
+		<EnableWindowsTargeting>true</EnableWindowsTargeting>
+		<NoWarn>NU1902;NU1903;NU1904;1701;1702;CS1591;NU1701;CA1416;NUnit1032;NUnit1034</NoWarn>
 	</PropertyGroup>
 </Project>
