--- a/Directory.Packages.props
+++ b/Directory.Packages.props
@@ -9,7 +9,7 @@
     <PackageVersion Include="ExcelNumberFormat" Version="1.1.0" />
     <PackageVersion Include="FluentFTP" Version="53.0.1" />
     <PackageVersion Include="HIC.SynthEHR" Version="2.0.1" />
-    <PackageVersion Include="SynthDicom" Version="1.0.3" />
+    <PackageVersion Include="SynthDicom" Version="1.0.0" />
     <!-- FAnsiSql.Legacy 3.3.2 (replaces older FAnsi 3.2.7 references) -->
     <PackageVersion Include="FAnsiSql.Legacy" Version="3.3.2" />
     <PackageVersion Include="LibArchive.Net" Version="0.1.5" />
@@ -55,5 +55,11 @@
     <PackageVersion Include="Microsoft.XmlSerializer.Generator" Version="9.0.7" />
     <PackageVersion Include="System.ServiceModel.Http" Version="6.2.0" />
     <PackageVersion Include="SharpCompress" Version="0.38.0" />
+    <PackageVersion Include="DotNetZip" Version="1.16.0" />
+    <PackageVersion Include="DicomTypeTranslation" Version="4.2.0" />
+    <PackageVersion Include="fo-dicom" Version="5.2.4" />
+    <PackageVersion Include="HIC.BadMedicine.Dicom" Version="0.1.2" />
+    <PackageVersion Include="Microsoft.Extensions.Logging.Console" Version="9.0.7" />
+    <PackageVersion Include="NunitXml.TestLogger" Version="6.1.0" />
   </ItemGroup>
 </Project>
