Fix compilation errors and central package management issues
- Remove version numbers from PackageReference items in HICPluginTests.csproj
  to comply with central package management
- Add System.Text.RegularExpressions using directive to DllWork.cs for
  GeneratedRegex support
- Replace System.Drawing with SixLabors.ImageSharp in JpegPatcher for
  cross-platform .NET 9 compatibility
- Add constructor overloads to WebServiceRetrievalFailure and
  LabReportRetrievalFailureException to fix caller sites
- Fix namespace imports in CHIColumnFinder test files (HICPlugin vs
  HICPluginInteractive)

Build now succeeds with 0 errors, resolving CI failures.

--- a/Plugins/HicPlugin/DrsPlugin/DrsPlugin.csproj
+++ b/Plugins/HicPlugin/DrsPlugin/DrsPlugin.csproj
@@ -10,6 +10,7 @@
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="SharpCompress" />
+    <PackageReference Include="SixLabors.ImageSharp" />
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="AWSSDK.S3" VersionOverride="4.0.7.14" />
