Eliminate all remaining build warnings
This commit eliminates all remaining build warnings (12 → 0):

1. NUnit1002 Warning Fixed (1 warning):
   - CHIColumnFinderTests.cs: Changed [TestCaseSource("CHIS")] to
     [TestCaseSource(nameof(CHIS))] for type safety

2. CS0067 Warnings Suppressed (7 warnings):
   - TestHelpers.cs: Added #pragma warning disable CS0067 around
     unused PropertyChanged events in mock objects
   - These events are required by INotifyPropertyChanged interface
     but intentionally unused in test mocks

3. CS8604/CS8605 Nullability Warnings Fixed (2 warnings):
   - DRSFilenameReplacer.cs: Added ArgumentException.ThrowIfNullOrEmpty
     for columnName null check
   - DRSFilenameReplacer.cs: Fixed nullable DateTime unboxing by
     checking parsed value before casting

4. MSB3073 XML Serializer Warnings Disabled (2 warnings):
   - SCIStorePlugin.csproj: Disabled Microsoft.XmlSerializer.Generator
     package and SGenTypes property
   - Generator was failing with exit code 1, runtime XML serialization
     will be used instead

Build Result: 0 Warnings, 0 Errors

--- a/Plugins/HicPlugin/SCIStorePlugin/SCIStorePlugin.csproj
+++ b/Plugins/HicPlugin/SCIStorePlugin/SCIStorePlugin.csproj
@@ -9,9 +9,12 @@
 		<GenerateAssemblyInfo>false</GenerateAssemblyInfo>
 		<DebugType>embedded</DebugType>
 	</PropertyGroup>
+	<!-- XML Serializer Generator disabled - was failing to generate serializer -->
+	<!--
 	<PropertyGroup>
 		<SGenTypes>SCIStorePlugin.Data.SciStoreReport;SCIStorePlugin.Data.CombinedReportData</SGenTypes>
 	</PropertyGroup>
+	-->
 	<ItemGroup>
 		<Compile Update="Service References\SciStoreServices81\Reference.cs">
 			<AutoGen>True</AutoGen>
@@ -125,7 +128,8 @@
 		<Compile Include="..\SharedAssemblyInfo.cs" Link="SharedAssemblyInfo.cs" />
 	</ItemGroup>
 	<ItemGroup>
-		<PackageReference Include="Microsoft.XmlSerializer.Generator" />
+		<!-- Microsoft.XmlSerializer.Generator disabled - was failing to generate serializer -->
+		<!-- <PackageReference Include="Microsoft.XmlSerializer.Generator" /> -->
 		<PackageReference Include="System.ServiceModel.Http" />
 	</ItemGroup>
 	<ItemGroup>
