Normalize line endings to LF across repository
Used git add --renormalize to normalize line endings according to
.gitattributes settings. This fixes the CRLF/LF inconsistencies
that were introduced when removing BOM characters from files.

Files affected: 36 files with line ending normalization
Primary changes: Plugin .cs files, .csproj files, and SQL scripts

This should resolve test failures caused by line ending mismatches.

--- a/Plugins/RdmpExtensions/Python/LoadModules.Extensions.Python/LoadModules.Extensions.Python.csproj
+++ b/Plugins/RdmpExtensions/Python/LoadModules.Extensions.Python/LoadModules.Extensions.Python.csproj
@@ -1,4 +1,4 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <AssemblyTitle>LoadModules.Extensions</AssemblyTitle>
     <Product>LoadModules.Extensions</Product>
