--- a/Plugins/RdmpExtensions/AutomationPlugins/LoadModules.Extensions.AutomationPlugins/LoadModules.Extensions.AutomationPlugins.csproj
+++ b/Plugins/RdmpExtensions/AutomationPlugins/LoadModules.Extensions.AutomationPlugins/LoadModules.Extensions.AutomationPlugins.csproj
@@ -1,4 +1,4 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <AssemblyTitle>LoadModules.Extensions.AutomationPlugins</AssemblyTitle>
     <Product>LoadModules.Extensions.AutomationPlugins</Product>
