--- a/Plugins/RdmpExtensions/StatsScriptsExecution/LoadModules.Extensions.StatsScriptsExecution/LoadModules.Extensions.StatsScriptsExecution.csproj
+++ b/Plugins/RdmpExtensions/StatsScriptsExecution/LoadModules.Extensions.StatsScriptsExecution/LoadModules.Extensions.StatsScriptsExecution.csproj
@@ -1,4 +1,4 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <AssemblyTitle>LoadModules.Extensions.StatsScriptsExecution</AssemblyTitle>
     <Product>LoadModules.Extensions.StatsScriptsExecution</Product>
