--- a/Directory.Packages.props
+++ b/Directory.Packages.props
@@ -10,7 +10,7 @@
     <PackageVersion Include="FluentFTP" Version="53.0.1" />
     <PackageVersion Include="HIC.SynthEHR" Version="2.0.1" />
     <PackageVersion Include="SynthDicom" Version="1.0.0" />
-    <!-- FAnsiSql.Legacy 3.3.2 (3.3.3 has packaging issue with SQLite dependency) -->
+    <!-- FAnsiSql.Legacy 3.3.2 (waiting for 3.3.4 with proper SQLite packaging) -->
     <PackageVersion Include="FAnsiSql.Legacy" Version="3.3.2" />
     <PackageVersion Include="LibArchive.Net" Version="0.1.5" />
     <PackageVersion Include="Microsoft.Bcl.AsyncInterfaces" Version="9.0.7" />
