Fix CI test failures: package documentation and MEF type resolution
- Fix PackageListIsCorrectTests regex to handle VersionOverride attribute
- Add missing packages to Packages.md (DicomTypeTranslation, fo-dicom, DotNetZip)
- Update DicomTypeTranslation URL to jas88 fork
- Remove duplicate PACKAGES.md files from plugin directories
- Add plugin project references to Rdmp.Core.Tests to ensure assemblies are loaded for MEF type resolution
- Improve error message in AutoCommentsEvaluator for MEF.GetType() failures

--- a/Rdmp.Core.Tests/Rdmp.Core.Tests.csproj
+++ b/Rdmp.Core.Tests/Rdmp.Core.Tests.csproj
@@ -84,6 +84,9 @@
     <ItemGroup>
         <ProjectReference Include="..\Rdmp.Core\Rdmp.Core.csproj" />
         <ProjectReference Include="..\Tests.Common\Tests.Common.csproj" />
+        <!-- Plugin references to ensure assemblies are loaded for MEF type resolution -->
+        <ProjectReference Include="..\Plugins\HicPlugin\SCIStorePlugin\SCIStorePlugin.csproj" />
+        <ProjectReference Include="..\Plugins\RdmpExtensions\AutomationPlugins\LoadModules.Extensions.AutomationPlugins\LoadModules.Extensions.AutomationPlugins.csproj" />
     </ItemGroup>
     <ItemGroup>
         <Compile Update="Curation\TestResources.Designer.cs">
